--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ form{
         img{
             width: 25%;
             height: auto;
-            float: right;
+            float: left;
             margin-left: 10px;
         }
         .icono-redes{
